--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
   "name": "cards",
-  "author": {
-    "name": "Sam Hirst",
-    "email": "Sam@hirst.xyz",
-    "url": "https://hirst.xyz"
-  },
-  "bugs": "https://github.com/Naeviant/Cards/issues",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Naeviant/Cards.git"
-  },
   "description": "A higher and lower cards game which gives you all the statistics you need to make an informed decision.",
-  "main": "app.js",
-  "private": true,
-  "scripts": {},
+  "version": "2.0.0",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "express": "^4.16.4",
-    "express-nunjucks": "^2.2.3",
-    "express-session": "^1.16.1",
-    "nunjucks": "^3.2.0",
-    "shuffle-array": "^1.0.1"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.21",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.11"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
